import java.lang.reflect.Array;


/*public class Cards {

   String [] cards1 = new String[10]; dyr
   String [] cards2 = new String[20]; frugter
   String [] cards3 = new String [30]; hverdagsting

   public getMatch () {
      return getMatch;

   }


}*/
