@startuml
'https://plantuml.com/use-case-diagram

class Main
class User
class UserMenu
class DatabaseUserIO
class Board
class Card
class TextUI
class SoundInput


Main *- SoundInput
SoundInput *-- SoundTrack

Main *-- User
User *-- UserMenu
User *-- Board
UserMenu *-- DatabaseUserIO
Board *--Card
Card *-- TextUI
DatabaseUserIO *-- TextUI

Main : + static void main()
Main : + SoundInput;
Main : + UserMenu;

User : - String username;
User : - String password;
User : - String id;
User : + getUsername()
User : + getPassword()
User : + getId()
User : + setHighscore()
User : + getHighscore()

UserMenu : DatabaseUserIO databaseUserIO;
UserMenu : TextUI textUI;
UserMenu : + setupUserMenu()

DatabaseUserIO : + ArrayList<User> users;
DatabaseUserIO : - String currentId;
DatabaseUserIO : + login()
DatabaseUserIO : + createUser()
DatabaseUserIO : + loadUsers()
DatabaseUserIO : + saveUsers()
DatabaseUserIO : + saveHighscore()
DatabaseUserIO : + saveTimeScore()

Board : + ArrayList<String> Card;
Board : + levelOne()
Board : + getCardIndex()
Board : + printBoard()

Card : + String picture;
Card : + String description;
Card : + boolean cardFlipped;
Card : + getDescription;
Card : + getPicture;

TextUI : DatabaseUserIO databaseUserIO;
TextUI : + pickLevel()
TextUI : + getUserInput()
TextUI : + loginMenu()
TextUI : + createUserMenu()

SoundInput : runMusic()
SoundTrack : music.wav



!pragma layout smetana
@enduml